WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136625
[CSS Grid Layout] Ignore ::first-letter pseudo-element
https://bugs.webkit.org/show_bug.cgi?id=136625
Summary
[CSS Grid Layout] Ignore ::first-letter pseudo-element
Manuel Rego Casasnovas
Reported
2014-09-08 04:49:25 PDT
According to the spec the ::first-line pseudo-element do not apply to grid containers (neither to flexboxes). This is not working as expected in all the situations, so I'll provide a patch to fix the issues. This has already landed in Blink:
https://src.chromium.org/viewvc/blink?view=rev&revision=180043
Attachments
Patch
(12.16 KB, patch)
2014-09-08 07:44 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch
(12.17 KB, patch)
2014-09-08 12:16 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch
(12.16 KB, patch)
2014-09-09 14:14 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2014-09-08 07:44:04 PDT
Created
attachment 237786
[details]
Patch
Darin Adler
Comment 2
2014-09-08 08:04:23 PDT
Comment on
attachment 237786
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=237786&action=review
> Source/WebCore/rendering/RenderBlock.cpp:3022 > +static inline bool isRenderBlockFlowOrRenderButton(RenderObject* renderObject)
This function should take a RenderElement&, not a RenderObject*.
Manuel Rego Casasnovas
Comment 3
2014-09-08 12:16:27 PDT
Created
attachment 237801
[details]
Patch
WebKit Commit Bot
Comment 4
2014-09-09 14:10:29 PDT
Comment on
attachment 237801
[details]
Patch Rejecting
attachment 237801
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 237801, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output:
http://webkit-queues.appspot.com/results/5866952681586688
Manuel Rego Casasnovas
Comment 5
2014-09-09 14:14:25 PDT
Created
attachment 237856
[details]
Patch
WebKit Commit Bot
Comment 6
2014-09-09 14:58:22 PDT
Comment on
attachment 237856
[details]
Patch Clearing flags on attachment: 237856 Committed
r173444
: <
http://trac.webkit.org/changeset/173444
>
WebKit Commit Bot
Comment 7
2014-09-09 14:58:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug